# DeltaruneTextboxes

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: multi-platform.yml
api/: API.hpp  Events.cpp  Events.hpp
resources/: Determination-hd.fnt  DeterminationGradient-uhd.fnt  DeterminationGradient.fnt
resources/shaders/: default.vsh  textShader.fsh
src/: API.cpp  CCKeyboardDispatcher.cpp  DeltaruneDialogObject.hpp  DeltaruneTextArea.cpp  DeltaruneTextArea.hpp  DialogLayer.cpp  DialogLayer.h  DialogLayer.hpp  Events.cpp  Events.hpp  FLAlertLayer.cpp  FLAlertLayer.h  FLAlertLayer.hpp  Global.hpp  ImageNode.cpp  ImageNode.h  ImageNode.hpp  PlatformToolbox.cpp  PlatformToolbox.hpp  PurchaseItemPopup.cpp  PurchaseItemPopup.h  PurchaseItemPopup.hpp  TextShaders.cpp  TextShaders.hpp  changeDesign.cpp  include.h  include.hpp  main.cpp
src/hooks/: CCKeyboardDispatcher.cpp  DialogLayer.cpp  DialogLayer.hpp  FLAlertLayer.cpp  FLAlertLayer.hpp  PlatformToolbox.cpp  PlatformToolbox.hpp  PurchaseItemPopup.cpp  PurchaseItemPopup.hpp
